--- a/package.json
+++ b/package.json
@@ -5,13 +5,27 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "react-swipeable": "^4.2.0",
+    "react-transition-group": "^2.5.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-ga": "^2.5.7",
+    "react-lazyload": "^2.5.0",
+    "gh-pages": "^1.1.0",
+    "lodash": "^4.17.11",
+    "antd": "^3.12.0",
+    "firebase": "^5.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "10.9.0",
+    "npm": "6.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
